<?xml version="1.0"?>
<package>
  <name>dynamixel_cpp</name>
  <version>0.0.0</version>
  <description>The dynamixel_cpp package</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
